Fixed code wrapping, added code background color, added repositories number to contest page

--- a/web3/src/css/Proposal.css
+++ b/web3/src/css/Proposal.css
@@ -34,10 +34,17 @@
 	display:flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-
-
+	white-space: pre-line;
+	
 }
 
+pre{
+	background-color: #f0f0f0;
+	padding: 10px;
+	border-radius: 10px;
+	white-space: pre-wrap;
+	word-break: break-all;
+}
 .proposal .description p{
 	width: 100%;
 	margin-top: 20px;
@@ -264,6 +271,7 @@ hr.solid {
 	min-width: 300px;
     width: 15%;
 	height: 100%;
+	max-height: 250px;
     padding-bottom: 20px;
 	margin-top: 20px;
     margin-left: 60px;
